--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-Additional_repositories: https://raw.githubusercontent.com/SwagNoirE/PaineisPublicos/master/Arquivos_externos/
+Additional_repositories: https://github.com/SwagNoirE/PaineisPublicos/raw/master/Arquivos_externos/
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
